--- a/staticAssets/help.one.html
+++ b/staticAssets/help.one.html
@@ -5,7 +5,7 @@
     <title>Help Page</title>
   </head>
   <body>
-    <h1>Help Page</h1>
+    <h1>Help Page One</h1>
     <p>Some text here</p>
   </body>
 </html>
